@@ -1,3 +1,14 @@
+2009-09-04  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpRuntime.cs: detect (and parse if possible) real Mono version
+	and make it available via internal, static property
+	MonoVersion. MonoVersionParsed property tells whether
+	Mono.Runtime.GetDisplayName returned string in a format we
+	understood.
+
+	* HttpException.cs: report real Mono version when backtrace is
+	displayed.
+
 2009-08-24  Marek Habersack  <mhabersack@novell.com>
 
 	* VirtualPath.cs: Added new constructor which takes virtual and
